--- a/project.json
+++ b/project.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "UiPath.Excel.Activities": "[2.9.0-preview]",
     "UiPath.Mail.Activities": "[1.9.0-preview]",
+    "UiPath.PDF.Activities": "[3.2.2]",
     "UiPath.System.Activities": "[20.6.1-preview]",
     "UiPath.UIAutomation.Activities": "[20.6.0-preview]"
   },
@@ -33,5 +34,6 @@
     },
     "fileInfoCollection": []
   },
-  "expressionLanguage": "VisualBasic"
+  "expressionLanguage": "VisualBasic",
+  "isTemplate": false
 }
